# isptar

./: .CMakeLists.txt.swp  .travis.yml  CMakeLists.txt  README.md  isptar.cpp  isptar_args.cpp  isptar_args.h  isptar_file.cpp  isptar_file.h  isptar_gzip.cpp  isptar_gzip.h  isptar_io.cpp  isptar_io.h  isptar_misc.cpp  isptar_misc.h  isptar_slice.cpp  isptar_slice.h  isptar_tar.cpp  isptar_tar.h
